Frontend is setup

--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -13,12 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d13cf7ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GROQ_API_KEY= \"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\"\n"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "GROQ_API_KEY = os.getenv(\"GROQ_API_KEY\")\n"
    ]
   },
   {
