fuzzy query added

--- a/notebooks/indexBuilder.ipynb
+++ b/notebooks/indexBuilder.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "97ed9fee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\asus\\miniconda3\\envs\\NewsRetrival\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# %pip install elasticsearch sentence-transformers\n",
     "from elasticsearch import Elasticsearch, helpers\n",
@@ -17,7 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
+   "id": "3d85db00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INDEX_NAME = \"news_reuters_docs\"\n",
+    "es = Elasticsearch(\n",
+    "    \"http://localhost:9200\",\n",
+    "    request_timeout=60,\n",
+    "    max_retries=3,\n",
+    "    retry_on_timeout=True\n",
+    ")\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cca68f24",
    "metadata": {},
    "outputs": [
@@ -31,13 +57,6 @@
     }
    ],
    "source": [
-    "INDEX_NAME = \"news_reuters_docs\"\n",
-    "es = Elasticsearch(\n",
-    "    \"http://localhost:9200\",\n",
-    "    request_timeout=60,\n",
-    "    max_retries=3,\n",
-    "    retry_on_timeout=True\n",
-    ")\n",
     "\n",
     "# Add this to clean up old indices\n",
     "print(\"Cleaning up...\")\n",
@@ -56,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "3a004311",
    "metadata": {},
    "outputs": [],
@@ -226,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "b6e87fe3",
    "metadata": {},
    "outputs": [
@@ -356,7 +375,6 @@
    "source": [
     "import json, time, re\n",
     "\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
     "\n",
     "file_path = r\"C:\\Users\\asus\\Desktop\\NewsRetrival\\smart-news-retrieval-\\output\\reuters_full.json\"\n",
     "\n",
@@ -398,7 +416,6 @@
     "        temporal = doc.get(\"temporalExpressions\", [])\n",
     "        georefs = doc.get(\"georeferences\", [])\n",
     "\n",
-    "        # Fix authors extraction - properly handle nested objects\n",
     "        authors = []\n",
     "        for author in doc.get(\"authors\", []):\n",
     "            if author:\n",
@@ -408,7 +425,6 @@
     "                    \"email\": author.get(\"email\", \"\")\n",
     "                })\n",
     "\n",
-    "        # Fix geopoints extraction - properly handle nested objects\n",
     "        geopoints = []\n",
     "        for g in doc.get(\"geopoints\", []):\n",
     "            if g and g.get(\"location\"):\n",
@@ -472,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ceafddae",
    "metadata": {},
    "outputs": [
@@ -481,85 +497,257 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Testing search with HNSW...\n",
-      "Found 10 results:\n",
-      "1. BRAZIL'S DEBT CRISIS BECOMING POLITICAL CRISIS\n",
-      "2. EX-ARCO <ARC> CHIEF SEES ENERGY CRISIS BY 1990\n",
-      "3. EC FARM CRISIS LIKELY TO GO TO END-JUNE SUMMIT\n",
-      "4. JAPAN SEES NEED TO ACT QUICKLY ON TRADE CRISIS\n",
-      "5. G-24 SAYS DEBT CRISIS ENTERING NEW PHASE\n",
-      "6. BANKING CENTER <TBCX> 1ST QTR NET\n",
-      "7. BANKING CENTER <TBCX.O> 3RD QTR NET\n",
-      "8. SIGNET BANKING CORP <SBK> 3RD QTR NET\n",
-      "9. THE BANKING CENTER <TBCX.O> 3RD QTR NET\n",
-      "10. CASH CRISIS HITS UGANDAN COFFEE BOARD\n"
+      "=== Test 1: Basic search ===\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_33044\\822203351.py:14: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
+      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_12944\\3695856247.py:101: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
       "  response = es.search(\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 results:\n",
+      "1. KUMAGAI GUMI'S UNIT SEEKS LISTING IN HONG KONG (score: 3.76)\n",
+      "2. ECONOMIC SPOTLIGHT - U.S. BANKING REGULATION (score: 2.46)\n",
+      "3. BANKERS PREDICT SHAKEOUT IN SWEDISH BANKING SYSTEM (score: 1.59)\n",
+      "4. ECONOMIC SPOTLIGHT - BANKAMERICA <BAC> (score: 1.59)\n",
+      "5. FIRST REPUBLICBANK <FRB> TROUBLED LOANS RISE (score: 1.57)\n",
+      "6. ECONOMIC SPOTLIGHT - FOREIGN BANKS IN GERMANY (score: 1.56)\n",
+      "7. DANISH PLAN TO HELP CRISIS-HIT BANK DEPOSITORS (score: 1.56)\n",
+      "8. BANKAMERICA <BAC> CHAIR SAYS BANK TURNING AROUND (score: 1.56)\n",
+      "9. GERMAN BANKS FACE DISRUPTION AFTER TALKS COLLAPSE (score: 1.55)\n",
+      "10. SAVINGS BANK CLOSED, 15TH TROUBLED U.S. S&L OF YEAR (score: 1.55)\n",
+      "\n",
+      "=== Test 2: Fuzzy search (with typo) ===\n",
+      "Found 10 results with typos corrected:\n",
+      "1. KUMAGAI GUMI'S UNIT SEEKS LISTING IN HONG KONG\n",
+      "2. BANK OF FRANCE SELLS 1.6 BILLION FRANCS CRH TAP\n",
+      "3. SOUTHOLD SAVINGS BANK <SDSB.O> 3RD QTR NET\n",
+      "\n",
+      "=== Test 3: Location-aware search ===\n",
+      "Found 10 results near London:\n",
+      "1. BANKING CENTER <TBCX> 1ST QTR NET\n",
+      "   Location: None\n",
+      "2. BANKING CENTER <TBCX.O> 3RD QTR NET\n",
+      "   Location: None\n",
+      "3. SIGNET BANKING CORP <SBK> 3RD QTR NET\n",
+      "   Location: None\n",
+      "\n",
+      "=== Test 4: Temporal search (1987 documents) ===\n",
+      "Found 10 results from 1987:\n",
+      "1. ECONOMIC SPOTLIGHT - U.S. BANKING REGULATION\n",
+      "   Date: 1987-03-17T08:57:16\n",
+      "2. WORTHERN BANKING <WOR> IN AGREEMENT WITH FEDS\n",
+      "   Date: 1987-03-25T14:36:52\n",
+      "3. ECONOMIC SPOTLIGHT - FOREIGN BANKS IN GERMANY\n",
+      "   Date: 1987-04-07T08:25:50\n",
+      "\n",
+      "=== Test 5: Combined spatio-temporal query ===\n",
+      "Found 5 German news near Hamburg in March 1987:\n",
+      "1. <GERMANTOWN SAVINGS BANK> IN SUBSCRIPTION OFFER\n",
+      "   Date: 1987-03-19T13:06:41\n",
+      "   Places: usa\n",
+      "\n",
+      "2. BERTELSMANN TO MARKET APPLE SOFTWARE IN GERMANY\n",
+      "   Date: 1987-03-09T11:58:53\n",
+      "   Places: west-germany\n",
+      "\n",
+      "3. EC INFLATION STARTS TO RISE AGAIN IN FEBRUARY\n",
+      "   Date: 1987-03-25T12:49:54\n",
+      "   Places: luxembourg\n",
+      "\n",
+      "4. FRENCH INFLATION SLOWS IN FEBRUARY\n",
+      "   Date: 1987-03-16T10:48:22\n",
+      "   Places: france\n",
+      "\n",
+      "5. INFLATION STILL A CONCERN, VOLCKER SAYS\n",
+      "   Date: 1987-03-12T16:48:07\n",
+      "   Places: usa\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "def hybrid_search(query, top_k=10):\n",
+    "def hybrid_search(query, user_location=None, temporal_filter=None, top_k=10):\n",
+    "    \"\"\"\n",
+    "    Enhanced hybrid search with fuzzy matching, recency boosting, and location-aware ranking.\n",
+    "    \n",
+    "    Args:\n",
+    "        query: Search query string\n",
+    "        user_location: Dict with 'lat' and 'lon' for geo-proximity ranking (optional)\n",
+    "        temporal_filter: Dict with 'start' and 'end' dates for temporal filtering (optional)\n",
+    "        top_k: Number of results to return\n",
+    "    \"\"\"\n",
     "    query_vector = model.encode(query).tolist()\n",
     "    \n",
-    "    # lexical search on title and content\n",
-    "    lexical_query = {\n",
-    "        \"multi_match\": {\n",
-    "            \"query\": query,\n",
-    "            \"fields\": [\"title^3\", \"content\"],\n",
-    "            \"type\": \"best_fields\"\n",
-    "        }\n",
+    "    # Build the base query with function_score for recency and location boosting\n",
+    "    query_body = {\n",
+    "        \"size\": top_k,\n",
+    "        \"query\": {\n",
+    "            \"function_score\": {\n",
+    "                \"query\": {\n",
+    "                    \"bool\": {\n",
+    "                        \"must\": [\n",
+    "                            {\n",
+    "                                \"multi_match\": {\n",
+    "                                    \"query\": query,\n",
+    "                                    \"fields\": [\"title^3\", \"content\"],\n",
+    "                                    \"type\": \"best_fields\",\n",
+    "                                    \"fuzziness\": \"AUTO\",  # Handles typos (1-2 char edits)\n",
+    "                                    \"prefix_length\": 2,   # First 2 chars must match exactly\n",
+    "                                    \"max_expansions\": 50  # Limit fuzzy term expansions\n",
+    "                                }\n",
+    "                            }\n",
+    "                        ]\n",
+    "                    }\n",
+    "                },\n",
+    "                \"functions\": [\n",
+    "                    # Recency boost - exponential decay favoring recent documents\n",
+    "                    {\n",
+    "                        \"exp\": {\n",
+    "                            \"date\": {\n",
+    "                                \"origin\": \"now\",\n",
+    "                                \"scale\": \"90d\",    # Documents 90 days old get 50% weight\n",
+    "                                \"offset\": \"7d\",    # No decay for documents within 7 days\n",
+    "                                \"decay\": 0.5\n",
+    "                            }\n",
+    "                        },\n",
+    "                        \"weight\": 2.0  # Increase importance of recency\n",
+    "                    }\n",
+    "                ],\n",
+    "                \"score_mode\": \"sum\",      # Add function scores together\n",
+    "                \"boost_mode\": \"multiply\"  # Multiply with query score\n",
+    "            }\n",
+    "        },\n",
+    "        \"knn\": [\n",
+    "            {\n",
+    "                \"field\": \"title_vector\",\n",
+    "                \"query_vector\": query_vector,\n",
+    "                \"k\": top_k,\n",
+    "                \"num_candidates\": 100,\n",
+    "                \"boost\": 2.0  # Title vectors weighted higher\n",
+    "            },\n",
+    "            {\n",
+    "                \"field\": \"content_chunks.vector\",\n",
+    "                \"query_vector\": query_vector,\n",
+    "                \"k\": top_k,\n",
+    "                \"num_candidates\": 100,\n",
+    "                \"boost\": 1.0\n",
+    "            }\n",
+    "        ]\n",
     "    }\n",
     "    \n",
-    "    # Use kNN for faster HNSW vector search\n",
+    "    # Add geo-proximity boost if user location is provided\n",
+    "    if user_location and \"lat\" in user_location and \"lon\" in user_location:\n",
+    "        query_body[\"query\"][\"function_score\"][\"functions\"].append({\n",
+    "            \"gauss\": {\n",
+    "                \"geo_location\": {\n",
+    "                    \"origin\": {\n",
+    "                        \"lat\": user_location[\"lat\"],\n",
+    "                        \"lon\": user_location[\"lon\"]\n",
+    "                    },\n",
+    "                    \"scale\": \"200km\",   # Documents 200km away get 50% weight\n",
+    "                    \"offset\": \"50km\",   # No decay within 50km\n",
+    "                    \"decay\": 0.5\n",
+    "                }\n",
+    "            },\n",
+    "            \"weight\": 1.5  # Adjust importance of location proximity\n",
+    "        })\n",
+    "    \n",
+    "    # Add temporal range filter if provided\n",
+    "    if temporal_filter and \"start\" in temporal_filter and \"end\" in temporal_filter:\n",
+    "        query_body[\"query\"][\"function_score\"][\"query\"][\"bool\"][\"filter\"] = [\n",
+    "            {\n",
+    "                \"range\": {\n",
+    "                    \"date\": {\n",
+    "                        \"gte\": temporal_filter[\"start\"],\n",
+    "                        \"lte\": temporal_filter[\"end\"]\n",
+    "                    }\n",
+    "                }\n",
+    "            }\n",
+    "        ]\n",
+    "    \n",
+    "    # Execute search\n",
     "    response = es.search(\n",
     "        index=INDEX_NAME,\n",
-    "        body={\n",
-    "            \"size\": top_k,\n",
-    "            \"query\": lexical_query,\n",
-    "            \"knn\": [\n",
-    "                {\n",
-    "                    \"field\": \"title_vector\",\n",
-    "                    \"query_vector\": query_vector,\n",
-    "                    \"k\": top_k,\n",
-    "                    \"num_candidates\": 100\n",
-    "                },\n",
-    "                {\n",
-    "                    \"field\": \"content_chunks.vector\",  # Change from content_vector\n",
-    "                    \"query_vector\": query_vector,\n",
-    "                    \"k\": top_k,\n",
-    "                    \"num_candidates\": 100\n",
-    "                }\n",
-    "            ]\n",
-    "        },\n",
+    "        body=query_body,\n",
     "        request_timeout=30\n",
     "    )\n",
     "    \n",
-    "    return [hit[\"_source\"][\"title\"] for hit in response[\"hits\"][\"hits\"]]\n",
+    "    # Return results with full metadata\n",
+    "    results = []\n",
+    "    for hit in response[\"hits\"][\"hits\"]:\n",
+    "        results.append({\n",
+    "            \"title\": hit[\"_source\"][\"title\"],\n",
+    "            \"score\": hit[\"_score\"],\n",
+    "            \"date\": hit[\"_source\"].get(\"date\"),\n",
+    "            \"geo_location\": hit[\"_source\"].get(\"geo_location\"),\n",
+    "            \"places\": hit[\"_source\"].get(\"places\", []),\n",
+    "            \"authors\": hit[\"_source\"].get(\"authors\", []),\n",
+    "            \"content_preview\": hit[\"_source\"][\"content\"][:200] + \"...\"  # First 200 chars\n",
+    "        })\n",
+    "    \n",
+    "    return results\n",
     "\n",
-    "# test\n",
-    "print(\"\\nTesting search with HNSW...\")\n",
+    "\n",
+    "# Test cases demonstrating all features\n",
+    "print(\"\\n=== Test 1: Basic search ===\")\n",
     "results = hybrid_search(\"banking crisis\")\n",
     "print(f\"Found {len(results)} results:\")\n",
-    "for i, title in enumerate(results, 1):\n",
-    "    print(f\"{i}. {title}\")"
+    "for i, result in enumerate(results, 1):\n",
+    "    print(f\"{i}. {result['title']} (score: {result['score']:.2f})\")\n",
+    "\n",
+    "print(\"\\n=== Test 2: Fuzzy search (with typo) ===\")\n",
+    "results = hybrid_search(\"bankng crsis\")  # Intentional typos\n",
+    "print(f\"Found {len(results)} results with typos corrected:\")\n",
+    "for i, result in enumerate(results[:3], 1):\n",
+    "    print(f\"{i}. {result['title']}\")\n",
+    "\n",
+    "print(\"\\n=== Test 3: Location-aware search ===\")\n",
+    "london_location = {\"lat\": 51.5074, \"lon\": -0.1278}\n",
+    "results = hybrid_search(\"banking crisis\", user_location=london_location)\n",
+    "print(f\"Found {len(results)} results near London:\")\n",
+    "for i, result in enumerate(results[:3], 1):\n",
+    "    location = result.get('geo_location', 'N/A')\n",
+    "    print(f\"{i}. {result['title']}\")\n",
+    "    print(f\"   Location: {location}\")\n",
+    "\n",
+    "print(\"\\n=== Test 4: Temporal search (1987 documents) ===\")\n",
+    "temporal_filter = {\n",
+    "    \"start\": \"1987-01-01\",\n",
+    "    \"end\": \"1987-12-31\"\n",
+    "}\n",
+    "results = hybrid_search(\"banking\", temporal_filter=temporal_filter)\n",
+    "print(f\"Found {len(results)} results from 1987:\")\n",
+    "for i, result in enumerate(results[:3], 1):\n",
+    "    print(f\"{i}. {result['title']}\")\n",
+    "    print(f\"   Date: {result.get('date', 'N/A')}\")\n",
+    "\n",
+    "print(\"\\n=== Test 5: Combined spatio-temporal query ===\")\n",
+    "# Search for German news near Hamburg in March 1987\n",
+    "hamburg_location = {\"lat\": 53.5511, \"lon\": 9.9937}\n",
+    "march_1987 = {\n",
+    "    \"start\": \"1987-03-01\",\n",
+    "    \"end\": \"1987-03-31\"\n",
+    "}\n",
+    "results = hybrid_search(\n",
+    "    query=\"Germany inflation\", \n",
+    "    user_location=hamburg_location,\n",
+    "    temporal_filter=march_1987,\n",
+    "    top_k=5\n",
+    ")\n",
+    "print(f\"Found {len(results)} German news near Hamburg in March 1987:\")\n",
+    "for i, result in enumerate(results, 1):\n",
+    "    print(f\"{i}. {result['title']}\")\n",
+    "    print(f\"   Date: {result.get('date', 'N/A')}\")\n",
+    "    print(f\"   Places: {', '.join(result.get('places', []))}\")\n",
+    "    print()"
    ]
   }
  ],
